# WikiPathOptimizer---COP3530-P3

./: .gitignore  CMakeLists.txt  CodeReview.md  README.md  build.ps1  package-lock.json
data/: wikispeedia-data.txt
include/: ArticleMapper.h  BFS.h  DFS.h  DataLoader.h  Graph.h  Metrics.h  UI.h
src/: ArticleMapper.cpp  BFS.cpp  DFS.cpp  DataLoader.cpp  Graph.cpp  UI.cpp  main.cpp
tests/: performance_benchmark.cpp  test_graph.cpp
wikipath-back-end/: CMakeLists.txt  test.cpp
wikipath-back-end/include/: BFS.h  Graph.h
wikipath-back-end/src/: BFS.cpp  DFS.cpp  Graph.cpp
wikipath-front-end/: package-lock.json  package.json
wikipath-front-end/src/: App.css  App.js
